Added another photo

--- a/neo-impressionismIndex.html
+++ b/neo-impressionismIndex.html
@@ -89,6 +89,15 @@
             Félix Fénéon was an editor, translator, art dealer, and anarchist activist and the critic who coined the
             term Neo-Impressionism to describe the works of Signac and Georges Seurat in the late 1880s.</div>
         </div>
+        <div class="w3-display-container mySlides">
+          <img src="images/neo-impressionism/maxresdefault.jpg" style="width:100%">
+          <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
+            Portrait de Félix Fénéon by Paul Signac
+          </div>
+          <div class="caption">
+
+            Signac’s <i>Le Port au Soleil Couchant</i>, sold for $22.4 million at bidding at Christie’s</div>
+        </div>
         <div class="vert-center">
           <button class="btn" onclick="plusDivs(-1)">&#10094;</button>
           <button class="btn" onclick="plusDivs(1)">&#10095;</button>
