added .gitignore, README_wh; modified neo-impressionismIndex .html and .css; minimize text and image distortion

--- a/neo-impressionismIndex.html
+++ b/neo-impressionismIndex.html
@@ -95,8 +95,7 @@
             Portrait de Félix Fénéon by Paul Signac
           </div>
           <div class="caption">
-
-            Signac’s <i>Le Port au Soleil Couchant</i>, sold for $22.4 million at bidding at Christie’s</div>
+            Signac’s Le Port au Soleil Couchant, sold for $22.4 million at bidding at Christie’s</div>
         </div>
         <div class="vert-center">
           <button class="btn" onclick="plusDivs(-1)">&#10094;</button>
@@ -112,7 +111,7 @@
       </a>
     </div>
   </div>
-  <script src="/scripts/neo-impressionismIndex.js"></script>
+  <script src="scripts/neo-impressionismIndex.js"></script>
 </body>
 
 </html>
